--- a/capitulo 20/style.css
+++ b/capitulo 20/style.css
@@ -3,9 +3,13 @@ body{
 }
 table{
     width: 400px;
-    border: 5px solid red;
+    height: 400px;
+    border: 5px solid rgb(8, 8, 8);
     border-collapse: collapse;
 }
 td{
 border: 2px solid black;
+padding: 5px;
+text-align:right;
+vertical-align:bottom;
 }
